--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,9 @@
 body {
     font-family: 'Maitree', sans-serif;
 }
+
+@layer components {
+    .input {
+        @apply bg-transparent border placeholder:text-gray2 border-gray3 text-sm rounded-[3px] focus:ring-primary focus:border-primary block w-full p-2.5;
+    }
+}
