--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,6 +12,6 @@ body {
 
 @layer components {
     .input {
-        @apply bg-transparent border placeholder:text-gray2 border-gray3 text-sm rounded-[3px] focus:ring-primary focus:border-primary block w-full p-2.5;
+        @apply bg-transparent border placeholder:text-gray2 border-gray3 text-sm rounded-[3px] focus:ring-primary focus:border-primary block w-full;
     }
 }
