create form in process #2

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,6 +12,21 @@ body {
 
 @layer components {
     .input {
-        @apply bg-transparent border placeholder:text-gray2 border-gray3 text-sm rounded-[3px] focus:ring-0 focus:border-primary block w-full;
+        @apply bg-transparent h-8 text-xs border placeholder:text-gray2 border-gray3 rounded-[3px] focus:ring-0 focus:border-primary block w-full;
     }
+}
+
+*::-webkit-scrollbar {
+	width: 3px;
+	background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+	background: #9a9a9a;
+	border-radius: 2px;
+}
+
+*::-webkit-scrollbar-thumb:horizontal {
+	background: #9a9a9a;
+	border-radius: 2px;
 }
