task show view & create project details

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,7 +12,7 @@ body {
 
 @layer components {
     .input {
-        @apply bg-transparent h-8 text-xs border placeholder:text-gray2 border-gray3 rounded-[3px] focus:ring-0 focus:border-primary block w-full;
+        @apply bg-transparent h-8 text-xs border placeholder:text-gray2 border-gray3 rounded-[3px] focus:ring-0 focus:border-primary block w-full disabled:cursor-not-allowed;
     }
 }
 
