--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,15 +22,15 @@ body {
 
 *::-webkit-scrollbar {
 	width: 3px;
+    height: 6px;
 	background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
-	background: #9a9a9a;
+	background: #ccc;
 	border-radius: 2px;
 }
 
-*::-webkit-scrollbar-thumb:horizontal {
-	background: #9a9a9a;
-	border-radius: 2px;
+*::-webkit-scrollbar-thumb:hover {
+	background: #a9a9a9;
 }
